--- a/apps/legacy/src/app/views/partials/header.hbs
+++ b/apps/legacy/src/app/views/partials/header.hbs
@@ -4,8 +4,8 @@
 <base href="/">
 
 <link rel="stylesheet" href="/stylesheets/chartist.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
-<link rel="stylesheet" href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css">
+<link rel="stylesheet" href="https://unpkg.com/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css" crossorigin="anonymous">
+<link rel="stylesheet" href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" crossorigin="anonymous">
 <link rel="stylesheet" href="/stylesheets/main.css">
 
 <script src="/js/chartist.min.js"></script>
