Implement rank, role and badge sync with enjin

--- a/apps/legacy/src/app/styles/main.scss
+++ b/apps/legacy/src/app/styles/main.scss
@@ -36,6 +36,10 @@ html {
             }
         }
 
+        .form-control:disabled {
+            color: #81878c;
+        }
+
         .justify-content-evenly {
             justify-content: space-evenly !important;
         }
