--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -36,8 +36,8 @@
     <div class="row">
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-code fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-code fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -50,8 +50,8 @@
         </div>
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-hands-helping fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-hands-helping fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -66,8 +66,8 @@
     <div class="row">
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-lightbulb fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-lightbulb fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -80,8 +80,8 @@
         </div>
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-sitemap fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-sitemap fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -144,8 +144,8 @@
     <div class="row">
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-cloud-download-alt fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-cloud-download-alt fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -158,8 +158,8 @@
         </div>
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-heartbeat fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-heartbeat fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -174,8 +174,8 @@
     <div class="row">
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-cogs fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-cogs fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -188,8 +188,8 @@
         </div>
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
-                <div class="col-md-3 d-flex justify-content-center text-primary p-3">
-                    <i class="fas fa-user-clock fa-4x h-100"></i>
+                <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
+                    <i class="fas fa-user-clock fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
