--- a/apps/legacy/src/app/views/layout.hbs
+++ b/apps/legacy/src/app/views/layout.hbs
@@ -30,6 +30,14 @@
         </div>
     {{/if}}
 
+    {{#each errors}}
+        <div class="container pt-3">
+            <div class="alert alert-danger" role="alert">
+                {{this}}
+            </div>
+        </div>
+    {{/each}}
+
     {{{body}}}
 </div>
 <hr>
