Update fontawesome icon classes

--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -37,7 +37,7 @@
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-code fa-4x"></i>
+                    <i class="fa-solid fa-code fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -51,7 +51,7 @@
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-hands-helping fa-4x"></i>
+                    <i class="fa-solid fa-hands-helping fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -67,7 +67,7 @@
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-lightbulb fa-4x"></i>
+                    <i class="fa-solid fa-lightbulb fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -81,7 +81,7 @@
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-sitemap fa-4x"></i>
+                    <i class="fa-solid fa-sitemap fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -145,7 +145,7 @@
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-cloud-download-alt fa-4x"></i>
+                    <i class="fa-solid fa-cloud-download-alt fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -159,7 +159,7 @@
         <div class="card mt-0 mb-3 mx-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-heartbeat fa-4x"></i>
+                    <i class="fa-solid fa-heartbeat fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -175,7 +175,7 @@
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-cogs fa-4x"></i>
+                    <i class="fa-solid fa-cogs fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -189,7 +189,7 @@
         <div class="card m-3 col-sm">
             <div class="row no-gutters">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
-                    <i class="fas fa-user-clock fa-4x"></i>
+                    <i class="fa-solid fa-user-clock fa-4x"></i>
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -243,7 +243,7 @@
                 application and guide you through our process.</p>
 
             <a type="button" class="btn btn-primary btn-lg" href="https://www.7th-ranger.com/armarecruitment">
-                <i class="fas fa-sign-in-alt"></i>
+                <i class="fa-solid fa-sign-in-alt"></i>
                 Submit application
             </a>
         </div>
@@ -268,11 +268,11 @@
 
             <div class="d-flex justify-content-evenly">
                 <a type="button" class="btn btn-secondary btn-lg" href="ts3server://ts3.7th-ranger.com?port=9375">
-                    <i class="fab fa-teamspeak"></i>
+                    <i class="fa-brands fa-teamspeak"></i>
                     Join our TeamSpeak
                 </a>
                 <a type="button" class="btn btn-secondary btn-lg" href="https://discord.gg/vbFMQXe">
-                    <i class="fab fa-discord"></i>
+                    <i class="fa-brands fa-discord"></i>
                     Join Discord
                 </a>
             </div>
