--- a/apps/legacy/src/app/views/pages/user.hbs
+++ b/apps/legacy/src/app/views/pages/user.hbs
@@ -7,17 +7,17 @@
     <hr>
 
     <h1 class="lead">
-        <i class="fas fa-link"></i>
+        <i class="fa-solid fa-link"></i>
         Account links
     </h1>
 
-    <p>Please select your Teamspeak and Steam accounts, this is used for synchronization of your rank and roles.</p>
+    <p>Please select your Enjin and Teamspeak accounts, this is used for synchronization of your rank and roles.</p>
 
     <div class="row">
         <div class="input-group flex-nowrap col-md-4">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">
-                    <i class="fab fa-discord fa-fw"></i>
+                    <i class="fa-brands fa-discord fa-fw"></i>
                 </span>
             </div>
             <input disabled type="text" class="form-control" placeholder="Discord user" aria-label="Username"
@@ -27,7 +27,7 @@
         <div class="input-group flex-nowrap col-md-4">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">
-                    <i class="fab fa-teamspeak fa-fw"></i>
+                    <i class="fa-brands fa-teamspeak fa-fw"></i>
                 </span>
             </div>
             {{#if user.ts3User}}
@@ -41,7 +41,7 @@
         <div class="input-group flex-nowrap col-md-4">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">
-                    <i class="fab fa-steam fa-fw"></i>
+                    <i class="fa-brands fa-steam fa-fw"></i>
                 </span>
             </div>
             {{#if user.steamUser}}
