--- a/apps/legacy/src/app/views/pages/users/edit.hbs
+++ b/apps/legacy/src/app/views/pages/users/edit.hbs
@@ -3,7 +3,7 @@
 
     <form method="post">
         <div class="form-group">
-            <label for="enjinUser-input"><i class="fas fa-globe"></i> Enjin user</label>
+            <label for="enjinUser-input"><i class="fa-solid fa-globe"></i> Enjin user</label>
             <select class="form-control" id="enjinUser-input" name="enjinUser">
                 <option value="">None</option>
                 {{#each enjinUsers}}
@@ -14,7 +14,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="ts3User-input"><i class="fab fa-teamspeak"></i> Teamspeak user</label>
+            <label for="ts3User-input"><i class="fa-brands fa-teamspeak"></i> Teamspeak user</label>
             <select class="form-control" id="ts3User-input" name="ts3User">
                 <option value="">None</option>
                 {{#each ts3Users}}
