--- a/apps/legacy/src/app/views/pages/users/index.hbs
+++ b/apps/legacy/src/app/views/pages/users/index.hbs
@@ -9,15 +9,15 @@
             <thead>
                 <tr>
                     <th scope="col">
-                        <i class="fab fa-discord"></i>
+                        <i class="fa-brands fa-discord"></i>
                         Name
                     </th>
                     <th scope="col">
-                        <i class="fas fa-globe"></i>
+                        <i class="fa-solid fa-globe"></i>
                         Name
                     </th>
                     <th scope="col">
-                        <i class="fab fa-teamspeak"></i>
+                        <i class="fa-brands fa-teamspeak"></i>
                         Name
                     </th>
                     <th scope="col">Rank</th>
@@ -56,13 +56,13 @@
                     <td class="text-right align-middle">
                         <a href="/users/sync/{{../this.id}}" class="btn btn-info"
                             title="Fetch ranks, roles and badges from Enjin and sync to other platforms if possible">
-                            <i class="fas fa-sync fa-fw"></i>
+                            <i class="fa-solid fa-sync fa-fw"></i>
                         </a>
                         <a href="/users/edit/{{../this.id}}" class="btn btn-warning">
-                            <i class="fas fa-pen fa-fw"></i>
+                            <i class="fa-solid fa-pen fa-fw"></i>
                         </a>
                         <a href="/users/delete/{{../this.id}}" class="btn btn-danger">
-                            <i class="fas fa-user-slash fa-fw"></i>
+                            <i class="fa-solid fa-user-slash fa-fw"></i>
                         </a>
                     </td>
                     {{/hasPermission}}
