--- a/apps/legacy/src/app/views/partials/assignable.edit.hbs
+++ b/apps/legacy/src/app/views/partials/assignable.edit.hbs
@@ -20,7 +20,7 @@
                 <div class="input-group flex-nowrap">
                     <div class="input-group-prepend">
                     <span class="input-group-text" id="addon-wrapping">
-                        <i class="fas fa-globe fa-fw"></i>
+                        <i class="fa-solid fa-globe fa-fw"></i>
                     </span>
                     </div>
                     <select class="form-control selectpicker" id="enjin-group-input" name="enjinTag">
@@ -42,7 +42,7 @@
                 <div class="input-group flex-nowrap">
                     <div class="input-group-prepend">
                     <span class="input-group-text" id="addon-wrapping">
-                        <i class="fab fa-teamspeak fa-fw"></i>
+                        <i class="fa-brands fa-teamspeak fa-fw"></i>
                     </span>
                     </div>
                     <select class="form-control selectpicker" id="ts-group-input" name="tsRank">
@@ -64,7 +64,7 @@
                 <div class="input-group flex-nowrap">
                     <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">
-                    <i class="fab fa-discord fa-fw"></i>
+                    <i class="fa-brands fa-discord fa-fw"></i>
                 </span>
                     </div>
                     <select disabled class="form-control selectpicker" id="discord-role-input">
