--- a/apps/legacy/src/app/views/pages/badges/index.hbs
+++ b/apps/legacy/src/app/views/pages/badges/index.hbs
@@ -7,9 +7,9 @@
             <thead>
             <tr>
                 <th scope="col">Name</th>
-                <th scope="col"><i class="fas fa-globe fa-fw"></i>Enjin tag</th>
-                <th scope="col"><i class="fab fa-teamspeak fa-fw"></i>Teamspeak group</th>
-                <th scope="col"><i class="fab fa-discord fa-fw"></i>Discord role</th>
+                <th scope="col"><i class="fa-solid fa-globe fa-fw"></i>Enjin tag</th>
+                <th scope="col"><i class="fa-brands fa-teamspeak fa-fw"></i>Teamspeak group</th>
+                <th scope="col"><i class="fa-brands fa-discord fa-fw"></i>Discord role</th>
                 {{#hasPermission user 'EDIT_BADGES'}}
                     <th scope="col" class="text-right">Actions</th>
                 {{/hasPermission}}
@@ -43,10 +43,10 @@
                     {{#hasPermission ../user 'EDIT_BADGES'}}
                         <td class="text-right align-middle">
                             <a href="/badges/edit/{{../this.id}}" class="btn btn-warning">
-                                <i class="fas fa-pen fa-fw"></i>
+                                <i class="fa-solid fa-pen fa-fw"></i>
                             </a>
                             <a href="/badges/delete/{{../this.id}}" class="btn btn-danger">
-                                <i class="fas fa-trash fa-fw"></i>
+                                <i class="fa-solid fa-trash fa-fw"></i>
                             </a>
                         </td>
                     {{/hasPermission}}
