--- a/apps/legacy/src/app/views/partials/navbar.hbs
+++ b/apps/legacy/src/app/views/partials/navbar.hbs
@@ -48,13 +48,13 @@
             <ul class="navbar-nav mr-3">
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://discord.gg/vbFMQXe">
-                        <i class="fab fa-discord fa-lg fa-fw"></i>
+                        <i class="fa-brands fa-discord fa-lg fa-fw"></i>
                         <span class="d-lg-none">Discord</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="ts3server://ts3.7th-ranger.com?port=9375">
-                        <i class="fab fa-teamspeak fa-lg fa-fw"></i>
+                        <i class="fa-brands fa-teamspeak fa-lg fa-fw"></i>
                         <span class="d-lg-none">Teamspeak</span>
                     </a>
                 </li>
