Add sorting to users page

--- a/apps/legacy/src/app/views/pages/users/index.hbs
+++ b/apps/legacy/src/app/views/pages/users/index.hbs
@@ -1,7 +1,7 @@
 <div class="container-fluid pt-3">
     <div class="d-flex justify-content-between align-items-center">
-        <h1>Users</h1>
-            <input id="user-search" type="text" class="form-control w-auto" placeholder="Search">
+        <h1>Users ({{users.length}})</h1>
+        <input id="user-search" type="text" class="form-control w-auto" placeholder="Search">
     </div>
 
     <div class="table-responsive">
