--- a/apps/legacy/src/app/views/pages/users/index.hbs
+++ b/apps/legacy/src/app/views/pages/users/index.hbs
@@ -1,7 +1,13 @@
 <div class="container-fluid pt-3">
     <div class="d-flex justify-content-between align-items-center">
         <h1>Users ({{users.length}})</h1>
-        <input id="user-search" type="text" class="form-control w-auto" placeholder="Search">
+        <div class="d-flex">
+            <a class="btn btn-info mr-3" href="/users/link">
+                Link
+                <i class="fa-solid fa-link"></i>
+            </a>
+            <input id="user-search" type="text" class="form-control w-auto" placeholder="Search">
+        </div>
     </div>
 
     <div class="table-responsive">
